# qvd-utils

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  transform.rs
test/: main.py
test/files/: AAPL.parquet
