[package]
name = "qvd"
version = "0.0.15"
authors = ["Sam Bentley <samtbentley@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A library for reading Qlik Sense .qvd file format from Python, written in Rust."
license = "Apache-2.0"
repository = "https://github.com/SBentley/qvd-utils"
keywords = ["python", "rust", "qlik", "sense", "qvd"]


[lib]
name = "qvd"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"]}
bitvec = "1.0.1"
parquet = "57.1.0"

[dependencies.pyo3]
version = "0.27.2"
features = ["extension-module"]

