[package]
name = "qvd"
version = "0.1.0"
authors = ["Tom Schamberger <tom.schamberger@msg.group>"]
edition = "2024"
readme = "README.md"
description = "A tool to transform Qlik Sense .qvd fils to Parquet."
license = "Apache-2.0"
keywords = ["python", "rust", "qlik", "sense", "qvd"]


[lib]
name = "qvd"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"]}
bitvec = "1.0.1"
parquet = "57.1.0"

[dependencies.pyo3]
version = "0.27.2"
features = []

